<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mqtt_ros_bridge</name>
  <version>1.1.0</version>
  <description>MQTT ROS Bridge</description>
  <maintainer email="foo@bar.com">benjaminwp18</maintainer>
  <maintainer email="rmc@carlstrom.com">InvincbleRMC</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>python3-paho-mqtt</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
